--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="EN">
 <head>
-    <link rel="stylesheet" type="text/css" href="../static/styles/index.css" />
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/style.css') }}"/>
+    <title>Car Share Calculator</title>
 </head>
 <body>
 <form method="POST">
