--- a/templates/index.html
+++ b/templates/index.html
@@ -1,20 +1,50 @@
 <!DOCTYPE html>
 <html lang="EN">
 <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/style.css') }}"/>
     <title>Car Share Calculator</title>
 </head>
 <body>
+
+<div class="container">
+    <header class="d-flex justify-content-center py-3">
+        <ul class="nav nav-pills">
+            <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Home</a></li>
+            <li class="nav-item"><a href="#" class="nav-link">Features</a></li>
+            <li class="nav-item"><a href="#" class="nav-link">Pricing</a></li>
+            <li class="nav-item"><a href="#" class="nav-link">FAQs</a></li>
+            <li class="nav-item"><a href="#" class="nav-link">About</a></li>
+        </ul>
+    </header>
+</div>
+
+<!--<label for="customRange2" class="form-label">Example range</label>-->
+<!--<input type="range" class="form-range" min="0" max="50" id="customRange2">-->
+
 <form method="POST">
+
     <label for="duration">Trip duration (min.):</label>
-    <input type="number" name="duration"> <br>
+    <input type="number" name="duration" id="duration"> <br>
 
     <label for="kilometers">Trip distance (km):</label>
-    <input type="number" name="kilometers"> <br>
+    <input type="number" name="kilometers" id="kilometers"> <br>
 
-    <label for="frequency">Trip frequency:</label>
-    <input type="number" name="frequency"> <br>
+    <div class="container themed-container">
+        <label for="frequency" class="form-label">Frequency</label>
+        <input type="range" name="frequency" class="form-range" min="0" max="50" step="1" id="frequency">
+    </div>
+    <br>
     <input type="submit">
+
 </form>
 <!--<p>-->
 <!--    Service: {{ service }} <br>-->
@@ -34,5 +64,9 @@
 {{titles[loop.index]}}
 {{ option|safe }}
 {% endfor %}
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 </body>
 </html>
